test/should-fail/vsgc1796.f3
/*
 * @test/compile-error
 */
var x = java.awt.KeyEvent.VK_Z;
